--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: mobile_ameroro_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
+  sdk: ">=3.4.3 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -52,6 +52,7 @@ dependencies:
   syncfusion_flutter_core: ^27.2.4
   syncfusion_flutter_datagrid: ^27.2.4
   syncfusion_flutter_gauges: ^27.2.5
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
@@ -62,7 +63,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -73,6 +73,7 @@ flutter:
     - assets/images/
     - assets/images/icons/
     - assets/images/arr/
+    - assets/images/markers/
     - assets/images/gambar-pondasi.svg
     - assets/images/OSP-11-12.svg
     - assets/images/OSP-31-32.svg
