--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,7 @@
 analyzer:
   errors:
     constant_identifier_names: ignore
+    prefer_const_constructors: ignore ignore ignore ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
