--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
     sdk: flutter
   flutter_localization: ^0.2.2
   flutter_rounded_date_picker: ^3.0.4
-  flutter_screenutil: ^5.9.3
+  # flutter_screenutil: ^5.9.3
   flutter_speed_dial: ^7.0.0
   flutter_svg: ^2.0.10+1
   fluttertoast: ^8.2.8
@@ -47,6 +47,7 @@ dependencies:
   http: ^1.2.2
   intl: ^0.19.0
   mqtt_client: ^10.5.1
+  photo_view: ^0.15.0
   shared_preferences: ^2.3.2
   syncfusion_flutter_charts: ^27.1.53
   syncfusion_flutter_core: ^27.2.4
